# bashbuild

./: README.md  pyproject.toml
docs/: build-workspace.md
src/bashbuild/: __init__.py  app.py  cli.py  discovery.py  manifest.py
