[project]
name = "bashbuild"
version = "0.1.0"
description = "Textual TUI to drive shell-script build workspaces"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["textual>=0.60", "pyyaml>=6.0"]

[project.scripts]
bashbuild = "bashbuild.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bashbuild"]
